--- a/10-tableau-et-mode-de-positionnement/06-horaire/index.htm
+++ b/10-tableau-et-mode-de-positionnement/06-horaire/index.htm
@@ -10,27 +10,29 @@
 <body>
     <table>
         <caption>Horaire automne 2024</caption>
-        <tr>
-            <th></th>
-            <th>Lundi</th>
-            <th>Mardi</th>
-            <th>Mercredi</th>
-            <th>Jeudi</th>
-            <th>Vendredi</th>
-        </tr>
+        <thead>
+            <tr>
+                <th></th>
+                <th>Lundi</th>
+                <th>Mardi</th>
+                <th>Mercredi</th>
+                <th>Jeudi</th>
+                <th>Vendredi</th>
+            </tr>
+        </thead>
         <!-- 8h  -->   
         <tr>
            <th>8h</th>
-           <td rowspan="2">1W1</td>
+           <td class="m-1w1" rowspan="2">1W1</td>
            <td></td>
            <td rowspan="4">5W5</td>
-           <td rowspan="10">TEAMS</td>
-           <td rowspan="3">1W1</td>
+           <td class="vertical" rowspan="10">Dispo&nbsp;TEAMS</td>
+           <td class="m-1w1" rowspan="3">1W1</td>
         </tr> 
         <!-- 9h  -->   
         <tr>
             <th>9h</th>
-            <td rowspan="3">1W1</td>
+            <td class="m-1w1" rowspan="3">1W1</td>
         </tr>
          <!-- 10h  -->  
         <tr>
@@ -45,13 +47,13 @@
          <!-- 12h  -->  
         <tr>
             <th>12h</th>
-            <td rowspan="2">Disponibilité</td>
+            <td rowspan="2">Dispo</td>
             <td>Dispo</td>
         </tr>
          <!-- 13h  -->  
         <tr>
             <th>13h</th>
-            <td rowspan="3">Réunion</td>
+            <td class="diagonal" rowspan="3">Réunion</td>
             <td rowspan="4">5W5</td>
         </tr>
          <!-- 14h  -->  
@@ -66,7 +68,7 @@
          <!-- 16h  -->  
         <tr>
             <th>16h</th>
-            <td rowspan="2">1W1</td>
+            <td class="m-1w1" rowspan="2">1W1</td>
         </tr>
          <!-- 17h  -->  
         <tr>
