--- a/10-tableau-et-mode-de-positionnement/06-horaire/index.htm
+++ b/10-tableau-et-mode-de-positionnement/06-horaire/index.htm
@@ -23,16 +23,18 @@
         <!-- 8h  -->   
         <tr>
            <th>8h</th>
-           <td class="m-1w1" rowspan="2">1W1</td>
+           <td class="m-1w1" rowspan="2"><h2 class="diagonal">1W1</h2></td>
            <td></td>
            <td rowspan="4">5W5</td>
            <td class="vertical" rowspan="10">Dispo&nbsp;TEAMS</td>
-           <td class="m-1w1" rowspan="3">1W1</td>
+           <td class="m-1w1" rowspan="3">
+                <h2 class="diagonal">1W1</h2>
+            </td>
         </tr> 
         <!-- 9h  -->   
         <tr>
             <th>9h</th>
-            <td class="m-1w1" rowspan="3">1W1</td>
+            <td class="m-1w1" rowspan="3"><h2 class="diagonal">1W1</h2></td>
         </tr>
          <!-- 10h  -->  
         <tr>
@@ -68,7 +70,11 @@
          <!-- 16h  -->  
         <tr>
             <th>16h</th>
-            <td class="m-1w1" rowspan="2">1W1</td>
+            <td class="m-1w1" rowspan="2">
+                <h2 class="diagonal">1W1</h2>
+               
+            
+            </td>
         </tr>
          <!-- 17h  -->  
         <tr>
